--- a/client/src/pages/introduce/introduce.style.scss
+++ b/client/src/pages/introduce/introduce.style.scss
@@ -51,7 +51,7 @@ a {
 .top {
   width: 100%;
   //background-color: #235390f7;
-  background-image: url("../img/universe.jpg");
+  // background-image: url("../img/universe.jpg");
   position: relative;
   display: flex;
   justify-content: center;
@@ -91,7 +91,7 @@ a {
           //border: 1px solid black;
           margin: 20px 20px;
           border-radius: 50%;
-          background-image: url("../img/earth.svg");
+          // background-image: url("../img/earth.svg");
           background-size: cover;
         }
       }
