clean code model

--- a/client/src/pages/introduce/introduce.module.scss
+++ b/client/src/pages/introduce/introduce.module.scss
@@ -10,16 +10,16 @@ a {
 }
 
 .header {
-  height: 70px;
+  // height: 70px;
   background-color: #235390;
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  z-index: 2;
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
+  // position: fixed;
+  // top: 0;
+  // left: 0;
+  // right: 0;
+  // z-index: 2;
+  // display: flex;
+  // justify-content: space-around;
+  // align-items: center;
 
   h2[name="game"] {
     margin: 0px 0px;
