--- a/client/src/pages/signup-login/signup-login.module.scss
+++ b/client/src/pages/signup-login/signup-login.module.scss
@@ -1,11 +1,11 @@
 .content {
   width: 100%;
   height: 100%;
+  padding: 30px;
   .cross {
-    width: 25px;
-    height: 25px;
+    width: 16px;
+    height: 16px;
     float: left;
-    opacity: 0.7;
   }
   .signup {
     text-decoration: none;
