--- a/client/src/App.css
+++ b/client/src/App.css
@@ -8,7 +8,7 @@
 
 *,
 html {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Nanum Gothic", sans-serif;
   box-sizing: border-box;
   text-decoration: none;
 }
