--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Nanum+Gothic&display=swap");
 /* Variable */
 :root {
   --yellow: #ffc800;
@@ -8,7 +9,7 @@
 
 *,
 html {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Nanum Gothic", sans-serif;
   box-sizing: border-box;
   text-decoration: none;
 }
