--- a/client/src/pages/introduce/introduce.module.scss
+++ b/client/src/pages/introduce/introduce.module.scss
@@ -1,6 +1,6 @@
 html,
 body {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Nanum Gothic", sans-serif;
   padding: 0;
   margin: 0;
 }
