--- a/client/src/pages/game/game.module.scss
+++ b/client/src/pages/game/game.module.scss
@@ -57,6 +57,13 @@
           border-color: #e5e5e5;
           border-radius: 16px;
           padding: 24px;
+
+          &:hover {
+            border-width: 2px 2px 2px 2px !important;
+            background-color: #f7f7f7;
+            position: relative;
+          }
+
           .answer__item-img {
             height: 160px;
             margin-bottom: 10px;
