--- a/client/src/pages/store/store.module.scss
+++ b/client/src/pages/store/store.module.scss
@@ -15,10 +15,11 @@
       &__title {
         display: flex;
         justify-content: space-between;
+        border-bottom: 2px solid #e5e5e5;
 
         h1 {
           font-size: 24px;
-          margin-bottom: 50px;
+          margin-bottom: 34px;
           color: #4c4c4c;
           line-height: 38px;
           flex: 1;
@@ -43,96 +44,81 @@
           }
         }
       }
-
-      &__category {
+      &__store {
         display: flex;
-        justify-content: flex-start;
+        justify-content: space-between;
+        align-items: center;
+        padding: 16px 0;
         border-bottom: 2px solid #e5e5e5;
-        height: 46px;
-
-        li {
-          padding: 0 13px 0 0;
-          margin-bottom: -2px;
-
-          h2 {
-            line-height: 26px;
-
-            a {
-              padding: 0 15px 17px;
-              text-align: center;
-              display: block;
-              color: #afafaf;
-              &:hover {
-                border-bottom: 2px solid #1cb0f6;
-              }
-            }
-          }
-        }
-      }
-
-      &__discuss {
-        padding: 21px 0;
-        display: flex;
-        justify-content: flex-start;
-        border-bottom: 2px solid #e5e5e5;
-
-        .avatar {
-          height: 60px;
-          width: 60px;
-          border-radius: 50%;
-          border: 0.5px solid #e5e5e5;
-          overflow: hidden;
-          img {
-            height: 100%;
-            width: 100%;
-          }
-        }
-
-        .info {
-          padding-left: 24px;
+        &-left {
+          max-width: 500px;
           flex: 1;
-
-          &__top {
-            display: flex;
-            justify-content: space-between;
-            margin-top: 10px;
-
-            &-right {
-              font-size: 15px;
-              font-weight: 600;
-              color: #afafaf;
-              display: flex;
-              align-items: end;
-              span {
-                &:first-child {
-                  font-size: 20px;
-                  margin-right: 5px;
-                }
-              }
+          display: flex;
+          justify-content: space-between;
+          align-items: center;
+          border: solid #e5e5e5;
+          border-width: 2px 2px 4px;
+          background: #fff;
+          border-radius: 16px;
+          padding: 15px 15px 15px 10px;
+          box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
+          cursor: pointer;
+          .avatar {
+            height: 60px;
+            width: 60px;
+            border-radius: 15px;
+            border: 0.5px solid #e5e5e5;
+            background: rgb(28, 176, 246);
+            background: linear-gradient(
+              90deg,
+              rgba(28, 176, 246, 1) 0%,
+              rgba(59, 188, 183, 1) 100%
+            );
+            overflow: hidden;
+            img {
+              border-radius: 50%;
+              height: 100%;
+              width: 100%;
             }
           }
 
-          &__bottom {
-            margin-top: 10px;
-            color: #afafaf;
+          h3 {
+            letter-spacing: 0.8px;
+            font-size: 20px;
+            color: #4c4c4c;
+          }
+          h4 {
+            color: #4c4c4c;
+          }
+        }
 
-            .like {
-              span {
-                margin-right: 3px;
+        &-right {
+          height: 50px;
+          width: 142px;
+          border: solid;
+          border-width: 0 0 4px;
+          border-color: #73afd4;
+          background: rgb(142, 145, 224);
+          background: linear-gradient(
+            to right,
+            #90caf3 0%,
+            #35cee8 51%,
+            #1fa2ff 100%
+          );
 
-                img {
-                  width: 17px;
-                  height: 22px;
-                }
-                &:first-child {
-                  padding: 2px 7px;
-                  margin-right: 5px;
-                }
-              }
-            }
-            .time {
-              margin: 0 5px;
-            }
+          &:hover {
+            background-position: right center; /* change the direction of the change here */
+          }
+
+          border-radius: 15px;
+          display: flex;
+          text-align: center;
+          align-items: center;
+          justify-content: center;
+
+          a {
+            color: #fff;
+            font-weight: 700;
           }
         }
       }
@@ -172,6 +158,7 @@
           width: 100%;
         }
       }
+
       .note {
         padding: 24px;
         border-radius: 16px;
