--- a/client/src/components/dropdown/dropdown.style.scss
+++ b/client/src/components/dropdown/dropdown.style.scss
@@ -49,10 +49,44 @@
         margin-right: 16px;
       }
     }
+
+    div {
+      padding: 0px 12px 16px;
+      color: #777;
+    }
   }
   li:last-child {
     .menu1__sub-item {
       border-bottom: none;
     }
+  }
+}
+
+.--language {
+  left: -155%;
+}
+
+.--corona {
+  left: -84%;
+}
+
+.--streak {
+  left: -135%;
+}
+
+.--lingots {
+  left: -113%;
+}
+
+.--me {
+  right: -30%;
+  left: auto;
+  &::before {
+    left: auto;
+    right: 10%;
+  }
+  &::after {
+    left: auto;
+    right: 10%;
   }
 }
