--- a/client/src/components/header/header.style.scss
+++ b/client/src/components/header/header.style.scss
@@ -50,11 +50,12 @@
     }
   }
 
-  // menu1
+  // menu1 dropdown
   .menu1 {
     padding-right: 6%;
     flex: 2;
     li {
+      position: relative;
       &:hover {
         position: relative;
         .menu__sub {
@@ -68,6 +69,13 @@
   .menu2 {
     flex: 1;
     li {
+      position: relative;
+      &:hover {
+        position: relative;
+        .menu__sub {
+          display: block;
+        }
+      }
       .menu2__item {
         font-size: 17px;
         padding: 0 12px;
