--- a/client/src/pages/setting/setting.module.scss
+++ b/client/src/pages/setting/setting.module.scss
@@ -105,6 +105,7 @@
                     font-size: 24px;
                     width: 280px;
                     text-align: left;
+                    margin-bottom: 12px;
                 }
                 a[name=profile]{
                     width: 280px;
