--- a/client/src/components/signup/signup.module.scss
+++ b/client/src/components/signup/signup.module.scss
@@ -22,43 +22,52 @@ a[name="signup"]:hover {
   width: 375px;
   height: 550px;
   position: absolute;
-  top: 40%;
+  top: 50%;
   left: 50%;
-  margin: -210px 0 0 -200px;
+  transform: translate(-50%, -50%);
   .login {
     text-align: center;
     font-size: 26px;
-    padding-bottom: 30px;
     font-family: sans-serif;
     font-weight: 700;
-    color: rgba(0, 0, 0, 0.4);
+    color: #3c3c3c;
+    margin: 0 0 26px;
+    line-height: 40px;
   }
   .inp {
-    input {
-      width: 340px;
-      position: absolute;
-      background-color: transparent;
-      border-color: transparent;
-    }
-
     .inp1 {
       width: 100%;
-      height: 45px;
-      background: #f7f7f7;
-      border: 2px solid #e5e5e5;
-      border-radius: 16px;
-      margin: 8px 0 0;
+      height: 49px;
+      margin-top: 8px;
+      position: relative;
+      img {
+        width: 25px;
+        position: absolute;
+        right: 16px;
+        top: 50%;
+        transform: translateY(-50%);
+        cursor: pointer;
+      }
       input {
-        padding: 6px 12px;
-        margin: 4.5px 15.5px;
+        width: 100%;
+        height: 100%;
+        background: #f7f7f7;
+        border: 2px solid #e5e5e5;
+        border-radius: 16px;
+        padding: 8px 16px;
         outline: none;
+        &::placeholder {
+          font-size: 16px;
+          font-weight: 500;
+          color: #b3afaf;
+        }
       }
     }
   }
   .signin {
     text-decoration: none;
     width: 100%;
-    height: 50px;
+    height: 54px;
     border-radius: 15px;
     text-transform: uppercase;
     border: transparent;
@@ -78,20 +87,22 @@ a[name="signup"]:hover {
     filter: brightness(1.1);
   }
   .hr {
-    hr {
-      margin: 30px auto;
-      background-color: #e5e5e5;
+    margin: 20px 0;
+    font-weight: bold;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+    &__line {
+      border-bottom: 2px solid #e5e5e5;
+      flex: 1;
     }
-    .or {
-      width: 60px;
-      height: 20px;
-      background-color: white;
-      margin-inline: auto;
-      text-align: center;
-      margin-top: -42px;
-      text-transform: uppercase;
-      font-weight: bold;
+    &__or {
       color: #afafaf;
+      padding: 0 8px;
+      text-transform: uppercase;
+      font-size: 15px;
+      flex-grow: 0;
     }
   }
   .inp5 {
@@ -106,7 +117,7 @@ a[name="signup"]:hover {
       border: solid #e5e5e5;
       border-width: 2px 2px 4px;
       text-align: center;
-      line-height: 50px;
+      line-height: 46px;
       text-transform: uppercase;
       border-radius: 15px;
       text-decoration: none;
@@ -135,13 +146,17 @@ a[name="signup"]:hover {
   .botton {
     width: 100%;
     height: 70px;
+    padding: 40px 0 10px;
     p.rule {
-      color: #888888;
-      margin-top: 120px;
+      color: #afafaf;
+      font-size: 14px;
       text-align: center;
+      text-shadow: 0 0 0.1px #afafaf;
       a {
         text-decoration: none;
-        color: #616161;
+        color: #a09f9f;
+        font-weight: bold;
+        text-shadow: 0 0 0.1px #afafaf;
       }
     }
   }
