--- a/client/src/components/signup/signup.module.scss
+++ b/client/src/components/signup/signup.module.scss
@@ -145,13 +145,13 @@ a[name="signup"]:hover {
   }
   .botton {
     width: 100%;
-    height: 70px;
     padding: 40px 0 10px;
     p.rule {
       color: #afafaf;
       font-size: 14px;
       text-align: center;
       text-shadow: 0 0 0.1px #afafaf;
+      line-height: 1.45;
       a {
         text-decoration: none;
         color: #a09f9f;
