--- a/client/src/pages/game/game.module.scss
+++ b/client/src/pages/game/game.module.scss
@@ -186,7 +186,7 @@
 .answer__item:active,
 .ignore:active,
 .check:active {
-  border-width: 2px 2px 2px 2px !important;
+  border-width: 2px !important;
   top: 2px;
   position: relative;
 }
