--- a/client/src/pages/discuss/discuss.module.scss
+++ b/client/src/pages/discuss/discuss.module.scss
@@ -1,3 +1,9 @@
+@keyframes spin {
+  100% {
+    transform: rotateZ(360deg);
+  }
+}
+
 .container-fluid {
   cursor: default;
   margin: 110px auto 0;
@@ -89,11 +95,26 @@
           border: 0.5px solid #e5e5e5;
           overflow: hidden;
           cursor: pointer;
+          position: relative;
 
           &:hover {
-            
+            border: none;
+            .border {
+              display: block;
+              width: 100%;
+              height: 100%;
+              border-radius: 50%;
+              padding: 2.5px;
+              background-clip: content-box;
+              animation: spin 10s linear infinite;
+              border: 2.5px dashed #1cb0f6;
+            }
           }
           img {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
             height: 100%;
             width: 100%;
           }
