--- a/client/src/pages/tudien/tudien.module.scss
+++ b/client/src/pages/tudien/tudien.module.scss
@@ -5,7 +5,11 @@
   flex-direction: column;
   justify-content: center;
   min-height: 500px;
-  padding: 178px 80px;
+  padding: 140px 80px;
+  position: relative;
+  margin-top: 94px;
+  margin-bottom: 20px;
+
   .center {
     text-align: center;
     min-width: 600px;
@@ -101,7 +105,7 @@
   width: 1140px;
   margin: 0 auto;
   hr {
-    margin: 0 24px 0;
+    margin: 0 24px 48px;
   }
   .hr {
     border: 0;
@@ -109,26 +113,28 @@
     height: 0;
   }
 
-  ul {
-    background-color: white;
-    padding: 50px;
+  &__list {
     margin: 0 auto;
-    list-style-type: none;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    height: 100%;
-    width: 100%;
-    li {
-      margin: 0 12px 20px;
-      a {
-        text-decoration: none;
-        text-transform: uppercase;
-        font-weight: 700;
-        font-size: 15px;
-        color: #afafaf;
-        &:hover {
-          color: #1cb0f6;
+    padding-bottom: 32px;
+
+    ul {
+      background-color: white;
+      list-style-type: none;
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      width: 100%;
+      li {
+        margin: 0 12px 20px;
+        a {
+          text-decoration: none;
+          text-transform: uppercase;
+          font-weight: 700;
+          font-size: 15px;
+          color: #afafaf;
+          &:hover {
+            color: #1cb0f6;
+          }
         }
       }
     }
