--- a/client/src/pages/discuss/discuss.module.scss
+++ b/client/src/pages/discuss/discuss.module.scss
@@ -42,7 +42,9 @@
           text-align: center;
           align-items: center;
           justify-content: center;
-
+          &:hover {
+            filter: brightness(1.1);
+          }
           a {
             color: #fff;
             font-weight: 700;
@@ -213,6 +215,7 @@
           caret-color: #1cb0f6;
           display: block;
           width: 100%;
+          outline: none;
         }
       }
       .note {
