--- a/client/src/pages/setting/setting.module.scss
+++ b/client/src/pages/setting/setting.module.scss
@@ -1,174 +1,193 @@
-*{
-    margin: 0;
-    padding: 0;
+* {
+  margin: 0;
+  padding: 0;
 }
-.header{
-    width: 100%;
-    height: 70px;
-    border-bottom: 2px solid rgb(145, 144, 144);
+.header {
+  width: 100%;
+  height: 70px;
+  border-bottom: 2px solid rgb(145, 144, 144);
 }
-.content{
-    width: 1150px;
-    height: 500px;
-    margin: 30px auto 0px;
-   
-    .pass{
-        width: 720px;
+.content {
+  width: 1150px;
+  height: 500px;
+  margin: 30px auto 0px;
+
+  .pass {
+    width: 720px;
+    float: left;
+    display: none;
+    .left1 {
+      width: 720px;
+      height: 100px;
+      h1 {
+        font-size: 30px;
         float: left;
-        display: none;
-        .left1{
-            width: 720px;
-            height: 100px;
-            h1{
-                font-size: 30px;
-                float: left;
-            }
-            button{
-                width: 140px;
-                height: 50px;
-                border: none;
-                border-radius: 15px;
-                float: right;
-                background-color: #7ce030;
-                border-bottom: 4px solid #58A700;
-                color: white;
-                font-weight: bold;
-                font-size: 15px;
-                cursor: pointer;
-                &:hover{
-                    background-color: #71f809;
-                }
-            }
-            button:focus{
-                outline: none;
-            }
-            button:active{
-                margin-top: 4px;
-                color: black;
-                border-bottom: none;
-                transition: .3s;
-            }
-        }
-        .left2{
-            width: 220px;
-            float: left;
-            label{
-                display: flex;
-                width: 100%;
-                height: 60px;
-                margin: 0;
-                text-align: left;
-                align-items: center;
-            }
-        }
-        .left3{
-            width: 500px;
-            float: left;
-            input{
-                width: 460px;
-                height: 40px;
-                margin: 10px 0;
-                border-radius: 15px;
-                background-color: #f7f7f7;
-                border: 0.5px solid #e5e5e5;
-                padding: 0 15px;
-            }
-            input:focus{
-                outline: none;
-            }
-        }
-    }
-    .right{
-        width: 430px;
+      }
+      button {
+        width: 140px;
+        height: 50px;
+        border: none;
+        border-radius: 15px;
         float: right;
-        .menu{
-            width: 380px;
-            height: 590px;
-            border: 1px solid rgb(145, 144, 144);
-            border-radius: 15px;
-            margin: 0 auto;
-            .avt{
-                width: 100%;
-                height: 52px;
-                margin: 30px 0;
-                img[name=avt]{
-                    width: 50px;
-                    height: 50px;
-                    border-radius: 50%;
-                    border: 1px solid black;
-                    margin-left: 25px;
-                    float: left;
-                }
-                h2{
-                    float: left;
-                    margin-left: 15px;
-                    font-size: 24px;
-                    width: 280px;
-                    text-align: left;
-                    margin-bottom: 12px;
-                }
-                a[name=profile]{
-                    width: 280px;
-                    text-decoration: none;
-                    font-size: 15px;
-                    color: #1CB0F6;
-                    text-align: left;
-                    float: left;
-                    margin-left: 15px;
-                    font-weight: bold;
-                }
-            }
-            a[name=user]{
-                display: flex;
-                //border: 1px solid black;
-                width: 280px;
-                height: 50px;
-                text-decoration: none;
-                border-radius: 15px;
-                align-items: center;
-                justify-content: left;
-                transform: translateX(23px);
-                //border: none;
-                text-align: left;
-                padding: 0px 25px;
-            }
-            a[name=user]:hover{
-                font-weight: bold;
-            }
-            a[name=user]:focus{
-                background-color: #dadada;
-                font-weight: bold;
-            }
+        background-color: #7ce030;
+        border-bottom: 4px solid #58a700;
+        color: white;
+        font-weight: bold;
+        font-size: 15px;
+        cursor: pointer;
+        &:hover {
+          background-color: #71f809;
         }
+      }
+      button:focus {
+        outline: none;
+      }
+      button:active {
+        margin-top: 4px;
+        color: black;
+        border-bottom: none;
+        transition: 0.3s;
+      }
     }
-    .left4{
-        width: 720px;
-        height: 160px;
-        float: left;
-        border-top: 1px solid black;
-        margin-top: 50px;
-        .bottom1{
-            padding: 30px;
-            text-align: center;
-            a[name=bottom1]{
-                text-decoration: none;
-                padding: 0 15px;
-                color: black;
-                &:hover{
-                    font-weight: bold;
-                }
-            }
-        }
-        .bottom2{
-            text-align: center;
-            a[name=bottom2]{
-                text-decoration: none;
-                padding: 0 15px;
-                color: black;
-                &:hover{
-                    font-weight: bold;
-                }
-            }
-        }
+    .left2 {
+      width: 220px;
+      float: left;
+      label {
+        display: flex;
+        width: 100%;
+        height: 60px;
+        margin: 0;
+        text-align: left;
+        align-items: center;
+      }
     }
+    .left3 {
+      width: 500px;
+      float: left;
+      input {
+        width: 460px;
+        height: 40px;
+        margin: 10px 0;
+        border-radius: 15px;
+        background-color: #f7f7f7;
+        border: 0.5px solid #e5e5e5;
+        padding: 0 15px;
+      }
+      input:focus {
+        outline: none;
+      }
+    }
+  }
+  .right {
+    width: 430px;
+    float: right;
+    .menu {
+      width: 380px;
+      border: 2px solid #e5e5e5;
+      border-radius: 15px;
+      margin: 0 auto;
+      .avt {
+        width: 100%;
+        height: 52px;
+        margin: 30px 0;
+        img[name="avt"] {
+          width: 45px;
+          height: 45px;
+          border-radius: 50%;
+          border: 0.5px solid #4c4c4c;
+          margin-left: 25px;
+          float: left;
+        }
+        h2 {
+          float: left;
+          margin-left: 15px;
+          font-size: 24px;
+          line-height: 26px;
+          width: 280px;
+          text-align: left;
+          color: #3c3c3c;
+        }
+        a[name="profile"] {
+          width: 280px;
+          text-decoration: none;
+          font-size: 15px;
+          line-height: 20px;
+          color: #1cb0f6;
+          text-align: left;
+          float: left;
+          margin-left: 15px;
+          text-transform: uppercase;
+          font-weight: bold;
+        }
+      }
+      &__list {
+        list-style-type: none;
+        display: flex;
+        flex-direction: column;
+        padding: 0 24px 24px;
+        .--active {
+          background: #dadada;
+        }
+        li {
+          border-radius: 16px;
+          margin-bottom: 2px;
+          &:hover,
+          &:active {
+            background: #dadada;
+          }
+          a {
+            color: #3c3c3c;
+            display: block;
+            font-size: 16px;
+            font-weight: 700;
+            overflow: hidden;
+            padding: 15px 20px;
+            text-overflow: ellipsis;
+            white-space: nowrap;
+          }
+        }
+      }
+    }
+  }
+  .footer {
+    width: 720px;
+    height: 160px;
+    float: left;
+    margin-top: 50px;
+    hr {
+      margin: 0 24px 48px;
+    }
+    .hr {
+      border: 0;
+      border-top: 2px solid #e5e5e5;
+      height: 0;
+    }
+    &__list {
+      margin: 0 auto;
+      padding-bottom: 32px;
+
+      ul {
+        background-color: white;
+        list-style-type: none;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        width: 100%;
+        li {
+          margin: 0 12px 20px;
+          a {
+            text-decoration: none;
+            text-transform: uppercase;
+            font-weight: 700;
+            font-size: 15px;
+            color: #afafaf;
+            letter-spacing: 0.2px;
+            &:hover {
+              color: #1cb0f6;
+            }
+          }
+        }
+      }
+    }
+  }
 }
