--- a/client/src/components/lesson-item/lesson-item.module.scss
+++ b/client/src/components/lesson-item/lesson-item.module.scss
@@ -1,14 +1,52 @@
+@keyframes spin {
+  100% {
+    transform: rotateZ(360deg);
+  }
+}
+
 .grid__item {
   text-align: center;
   color: #3c3c3c;
+
+  .border {
+    position: absolute;
+    display: block;
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    padding: 2.5px;
+    background-clip: content-box;
+    animation: spin 25s linear infinite;
+    border: 2.5px dashed #46c4ff;
+    border-color: #f7797d #fed540 #78c800 #46c4ff;
+  }
 
   .grid__item-img {
     height: 106px;
     width: 106px;
     border-radius: 50%;
     border: 10px solid #e5e5e5;
+    border-color: #b2e4ec4a #fffdba;
     box-sizing: border-box;
     position: relative;
+    &:hover {
+      filter: brightness(1.04);
+      transition: 1s ease;
+    }
+
+    &::before {
+      content: "";
+      display: block;
+      height: 109px;
+      width: 109px;
+      position: absolute;
+      left: 50%;
+      top: 50%;
+      transform: translate(-50%, -50%);
+      border-radius: 50%;
+      border: 0.1px solid #e8e8e8;
+      filter: drop-shadow(2px 2px 5px #555);
+    }
 
     .grid__item-img--purple {
       background-color: #ce82ff;
