--- a/client/src/components/main/main.style.scss
+++ b/client/src/components/main/main.style.scss
@@ -15,10 +15,19 @@
     bottom: 24px;
     left: 0;
     border: 2px solid #e5e5e5;
+    background: #fff;
     border-bottom-width: 4px;
     border-radius: 50%;
     height: 72px;
     width: 72px;
+
+    &:hover {
+      filter: brightness(0.9);
+    }
+    &:active {
+      bottom: 22px;
+      border-bottom-width: 2px !important;
+    }
 
     .exercise__link {
       padding: 28px 17px;
