--- a/client/src/components/sidebar/sidebar.module.scss
+++ b/client/src/components/sidebar/sidebar.module.scss
@@ -8,6 +8,12 @@
 .sidebar {
   flex: 3;
 
+  h2 {
+    color: #3c3c3c;
+    font-size: 24px;
+    line-height: 26px;
+  }
+
   .competion {
     padding: 24px 24px 0;
     width: 380px;
@@ -15,7 +21,7 @@
     border-radius: 20px;
     margin-bottom: 24px;
 
-    .competion__about {
+    &__about {
       display: flex;
       justify-content: space-between;
       margin-bottom: 24px;
@@ -43,7 +49,7 @@
       }
     }
 
-    .competion__trophy {
+    &__trophy {
       display: flex;
       justify-content: space-between;
       margin-bottom: 24px;
@@ -58,13 +64,17 @@
         }
       }
     }
-    .competion__notif {
+    &__notif {
       padding: 24px 0;
       display: flex;
       flex-direction: column;
       justify-content: center;
       align-items: center;
       text-align: center;
+      height: 242px;
+      p {
+        margin: 15px 0;
+      }
     }
   }
   // Overall
@@ -291,7 +301,7 @@
     border-radius: 20px;
     margin-bottom: 24px;
 
-    .friends__about {
+    &__about {
       display: flex;
       justify-content: space-between;
       margin-bottom: 12px;
