--- a/client/src/components/lesson-item/lesson-item.module.scss
+++ b/client/src/components/lesson-item/lesson-item.module.scss
@@ -4,9 +4,15 @@
   }
 }
 
+.main {
+  display: block;
+  position: relative;
+}
+
 .grid__item {
   text-align: center;
   color: #3c3c3c;
+  z-index: 0;
 
   .border {
     position: absolute;
@@ -18,6 +24,7 @@
     background-clip: content-box;
     animation: spin 25s linear infinite;
     border: 2.5px dashed #46c4ff;
+    z-index: 0;
     border-color: #f7797d #fed540 #78c800 #46c4ff;
   }
 
@@ -28,7 +35,8 @@
     border: 10px solid #e5e5e5;
     border-color: #b2e4ec4a #fffdba;
     box-sizing: border-box;
-    position: relative;
+    z-index: 0;
+
     &:hover {
       filter: brightness(1.04);
       transition: 1s ease;
