--- a/client/src/components/popup/popup.module.scss
+++ b/client/src/components/popup/popup.module.scss
@@ -6,17 +6,22 @@
 
 .popup {
   position: absolute;
-  background: #ce82ff;
-  color: #fff;
-  padding: 24px 16px;
-  text-align: center;
-  width: 300px;
-  border-radius: 15px;
-  box-sizing: border-box;
-  transform: translateZ(0);
-  background-image: url("../../assets/img/key.svg");
-  background-position: left top;
-  z-index: 2;
+  &::after {
+    content: "";
+    display: block;
+    background: #ce82ff;
+    color: #fff;
+    padding: 24px 16px;
+    text-align: center;
+    min-height: 200px;
+    width: 300px;
+    border-radius: 15px;
+    box-sizing: border-box;
+    transform: translateZ(0);
+    background-image: url("../../assets/img/key.svg");
+    background-position: left top;
+    z-index: 3;
+  }
 
   &::before {
     content: "";
