--- a/client/src/components/lesson-item/lesson-item.module.scss
+++ b/client/src/components/lesson-item/lesson-item.module.scss
@@ -4,100 +4,81 @@
   }
 }
 
-.grid__item {
-  text-align: center;
-  color: #3c3c3c;
+.item {
+  position: relative;
 
-  .border {
-    position: absolute;
-    display: block;
-    width: 100%;
-    height: 100%;
-    border-radius: 50%;
-    padding: 2.5px;
-    background-clip: content-box;
-    animation: spin 25s linear infinite;
-    border: 2.5px dashed #46c4ff;
-    border-color: #f7797d #fed540 #78c800 #46c4ff;
-  }
+  .grid__item {
+    text-align: center;
+    color: #3c3c3c;
 
-  .grid__item-img {
-    height: 106px;
-    width: 106px;
-    border-radius: 50%;
-    border: 10px solid #e5e5e5;
-    border-color: #b2e4ec4a #fffdba;
-    box-sizing: border-box;
-    position: relative;
-    &:hover {
-      filter: brightness(1.04);
-      transition: 1s ease;
-    }
-
-    &::before {
-      content: "";
-      display: block;
-      height: 109px;
-      width: 109px;
+    .border {
       position: absolute;
-      left: 50%;
-      top: 50%;
-      transform: translate(-50%, -50%);
-      border-radius: 50%;
-      border: 0.1px solid #e8e8e8;
-      filter: drop-shadow(2px 2px 5px #555);
-    }
-
-    .grid__item-img--purple {
-      background-color: #ce82ff;
-      border-radius: 50%;
+      display: block;
       width: 100%;
       height: 100%;
-      box-sizing: border-box;
-      border: 8px solid #fff;
-      display: flex;
-      justify-content: center;
+      border-radius: 50%;
+      padding: 2.5px;
+      background-clip: content-box;
+      animation: spin 25s linear infinite;
+      border: 2.5px dashed #46c4ff;
+      border-color: #f7797d #fed540 #78c800 #46c4ff;
+    }
 
-      img {
-        &:first-child {
-          height: 65%;
-          width: 65%;
-          align-self: center;
-        }
-        &:last-child {
-          position: absolute;
-          bottom: 3%;
-          left: 73%;
-          width: 35px;
+    .grid__item-img {
+      height: 106px;
+      width: 106px;
+      border-radius: 50%;
+      border: 10px solid #e5e5e5;
+      border-color: #b2e4ec4a #fffdba;
+      box-sizing: border-box;
+      position: relative;
+      &:hover {
+        filter: brightness(1.04);
+        transition: 1s ease;
+      }
+
+      &::before {
+        content: "";
+        display: block;
+        height: 109px;
+        width: 109px;
+        position: absolute;
+        left: 50%;
+        top: 50%;
+        transform: translate(-50%, -50%);
+        border-radius: 50%;
+        border: 0.1px solid #e8e8e8;
+        filter: drop-shadow(2px 2px 5px #555);
+      }
+
+      .grid__item-img--purple {
+        background-color: #ce82ff;
+        border-radius: 50%;
+        width: 100%;
+        height: 100%;
+        box-sizing: border-box;
+        border: 8px solid #fff;
+        display: flex;
+        justify-content: center;
+
+        img {
+          &:first-child {
+            height: 65%;
+            width: 65%;
+            align-self: center;
+          }
+          &:last-child {
+            position: absolute;
+            bottom: 3%;
+            left: 73%;
+            width: 35px;
+          }
         }
       }
     }
-  }
-}
-
-// Complete
-
-.--complete {
-  width: 90px;
-  overflow: hidden;
-  background-color: #fff;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-
-  &::before {
-    content: "";
-    display: block;
-    min-width: 100%;
-    border-bottom: 2px solid #e5e5e5;
-    position: absolute;
-    top: 50%;
-    left: 0;
-    z-index: -1;
-  }
-
-  img {
-    height: 100%;
-    width: 80%;
+    h3 {
+      margin-top: 12px;
+      font-weight: 700;
+    }
   }
 }
