post data from client

--- a/client/src/components/signup/signup.module.scss
+++ b/client/src/components/signup/signup.module.scss
@@ -82,6 +82,7 @@ a[name="signup"]:hover {
     font-weight: bold;
     margin-top: 20px;
     background-color: #1cb0f6;
+    outline: none;
   }
   .signin:hover {
     filter: brightness(1.1);
