cursor pointer input submit

--- a/client/src/components/signup/signup.module.scss
+++ b/client/src/components/signup/signup.module.scss
@@ -83,6 +83,7 @@ a[name="signup"]:hover {
     margin-top: 20px;
     background-color: #1cb0f6;
     outline: none;
+    cursor: pointer;
   }
   .signin:hover {
     filter: brightness(1.1);
