fix warning from brower

--- a/client/src/pages/discuss/discuss.module.scss
+++ b/client/src/pages/discuss/discuss.module.scss
@@ -139,7 +139,7 @@
               font-weight: 600;
               color: #afafaf;
               display: flex;
-              align-items: end;
+              align-items: flex-end;
               cursor: pointer;
               &:hover {
                 color: #ffc800;
